fixed the horizontal scroll

--- a/css/home.css
+++ b/css/home.css
@@ -1,12 +1,17 @@
-
 img {
     width: 380px;
     height: 80%;
     margin: 0;
 }
+
+.image {
+    display: flex;
+    justify-content: center;
+}
+
 .aboutme {
  /* background-color: brown; */
- padding-top: .8em;
+ padding: 0.55em .8em;
  text-align: center;
  margin: 0;
 }
